plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.reactive-task-management'
version = '0.0.1-SNAPSHOT'
description = 'Royal Gambit interview task'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring3x:4.21.0'
	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.13'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.5.7'
}

tasks.named('test') {
	useJUnitPlatform()
}
